// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`#createGHA > command inputs > 'changelogs' ' (single)' > should run GHA creation workflow and generate valid workflow file 1`] = `
"
Your GitHub Actions workflow file has been created! ✨

Almost done! Just a couple more steps:
1. Push your newly created file (.github/workflows/rdme-changelogs.yml) to GitHub 🚀
2. Create a GitHub secret called README_API_KEY and populate the value with your ReadMe API key (••••••••••••I_KEY) 🔑

🔐 Check out GitHub's docs for more info on creating encrypted secrets (https://docs.github.com/actions/security-guides/encrypted-secrets#creating-encrypted-secrets-for-a-repository)

🦉 If you have any more questions, feel free to drop us a line! support@readme.io
"
`;

exports[`#createGHA > command inputs > 'changelogs' ' (single)' > should run GHA creation workflow and generate valid workflow file 2`] = `
"# This GitHub Actions workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`some-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - some-branch

jobs:
  rdme-changelogs:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v4

      - name: Run \`changelogs\` command 🚀
        uses: readmeio/rdme@v7
        with:
          rdme: changelogs ./changelogs/rdme.md --key=\${{ secrets.README_API_KEY }}
"
`;

exports[`#createGHA > command inputs > 'changelogs' ' (single)' > should run GHA creation workflow with \`--github\` flag and messy file name and generate valid workflow file 1`] = `
"
Your GitHub Actions workflow file has been created! ✨

Almost done! Just a couple more steps:
1. Push your newly created file (.github/workflows/rdme-changelogs-with-github-flag.yml) to GitHub 🚀
2. Create a GitHub secret called README_API_KEY and populate the value with your ReadMe API key (••••••••••••I_KEY) 🔑

🔐 Check out GitHub's docs for more info on creating encrypted secrets (https://docs.github.com/actions/security-guides/encrypted-secrets#creating-encrypted-secrets-for-a-repository)

🦉 If you have any more questions, feel free to drop us a line! support@readme.io
"
`;

exports[`#createGHA > command inputs > 'changelogs' ' (single)' > should run GHA creation workflow with \`--github\` flag and messy file name and generate valid workflow file 2`] = `
"# This GitHub Actions workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`another-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - another-branch

jobs:
  rdme-changelogs:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v4

      - name: Run \`changelogs\` command 🚀
        uses: readmeio/rdme@v7
        with:
          rdme: changelogs ./changelogs/rdme.md --key=\${{ secrets.README_API_KEY }}
"
`;

exports[`#createGHA > command inputs > 'changelogs' '' > should run GHA creation workflow and generate valid workflow file 1`] = `
"
Your GitHub Actions workflow file has been created! ✨

Almost done! Just a couple more steps:
1. Push your newly created file (.github/workflows/rdme-changelogs.yml) to GitHub 🚀
2. Create a GitHub secret called README_API_KEY and populate the value with your ReadMe API key (••••••••••••I_KEY) 🔑

🔐 Check out GitHub's docs for more info on creating encrypted secrets (https://docs.github.com/actions/security-guides/encrypted-secrets#creating-encrypted-secrets-for-a-repository)

🦉 If you have any more questions, feel free to drop us a line! support@readme.io
"
`;

exports[`#createGHA > command inputs > 'changelogs' '' > should run GHA creation workflow and generate valid workflow file 2`] = `
"# This GitHub Actions workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`some-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - some-branch

jobs:
  rdme-changelogs:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v4

      - name: Run \`changelogs\` command 🚀
        uses: readmeio/rdme@v7
        with:
          rdme: changelogs ./changelogs --key=\${{ secrets.README_API_KEY }}
"
`;

exports[`#createGHA > command inputs > 'changelogs' '' > should run GHA creation workflow with \`--github\` flag and messy file name and generate valid workflow file 1`] = `
"
Your GitHub Actions workflow file has been created! ✨

Almost done! Just a couple more steps:
1. Push your newly created file (.github/workflows/rdme-changelogs-with-github-flag.yml) to GitHub 🚀
2. Create a GitHub secret called README_API_KEY and populate the value with your ReadMe API key (••••••••••••I_KEY) 🔑

🔐 Check out GitHub's docs for more info on creating encrypted secrets (https://docs.github.com/actions/security-guides/encrypted-secrets#creating-encrypted-secrets-for-a-repository)

🦉 If you have any more questions, feel free to drop us a line! support@readme.io
"
`;

exports[`#createGHA > command inputs > 'changelogs' '' > should run GHA creation workflow with \`--github\` flag and messy file name and generate valid workflow file 2`] = `
"# This GitHub Actions workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`another-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - another-branch

jobs:
  rdme-changelogs:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v4

      - name: Run \`changelogs\` command 🚀
        uses: readmeio/rdme@v7
        with:
          rdme: changelogs ./changelogs --key=\${{ secrets.README_API_KEY }}
"
`;

exports[`#createGHA > command inputs > 'openapi' '' > should run GHA creation workflow and generate valid workflow file 1`] = `
"
Your GitHub Actions workflow file has been created! ✨

Almost done! Just a couple more steps:
1. Push your newly created file (.github/workflows/rdme-openapi.yml) to GitHub 🚀
2. Create a GitHub secret called README_API_KEY and populate the value with your ReadMe API key (••••••••••••I_KEY) 🔑

🔐 Check out GitHub's docs for more info on creating encrypted secrets (https://docs.github.com/actions/security-guides/encrypted-secrets#creating-encrypted-secrets-for-a-repository)

🦉 If you have any more questions, feel free to drop us a line! support@readme.io
"
`;

exports[`#createGHA > command inputs > 'openapi' '' > should run GHA creation workflow and generate valid workflow file 2`] = `
"# This GitHub Actions workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`some-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - some-branch

jobs:
  rdme-openapi:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v4

      - name: Run \`openapi\` command 🚀
        uses: readmeio/rdme@v7
        with:
          rdme: openapi petstore.json --key=\${{ secrets.README_API_KEY }} --id=spec_id
"
`;

exports[`#createGHA > command inputs > 'openapi' '' > should run GHA creation workflow with \`--github\` flag and messy file name and generate valid workflow file 1`] = `
"
Your GitHub Actions workflow file has been created! ✨

Almost done! Just a couple more steps:
1. Push your newly created file (.github/workflows/rdme-openapi-with-github-flag.yml) to GitHub 🚀
2. Create a GitHub secret called README_API_KEY and populate the value with your ReadMe API key (••••••••••••I_KEY) 🔑

🔐 Check out GitHub's docs for more info on creating encrypted secrets (https://docs.github.com/actions/security-guides/encrypted-secrets#creating-encrypted-secrets-for-a-repository)

🦉 If you have any more questions, feel free to drop us a line! support@readme.io
"
`;

exports[`#createGHA > command inputs > 'openapi' '' > should run GHA creation workflow with \`--github\` flag and messy file name and generate valid workflow file 2`] = `
"# This GitHub Actions workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`another-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - another-branch

jobs:
  rdme-openapi:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v4

      - name: Run \`openapi\` command 🚀
        uses: readmeio/rdme@v7
        with:
          rdme: openapi petstore.json --key=\${{ secrets.README_API_KEY }} --id=spec_id
"
`;

exports[`#createGHA > command inputs > 'openapi:validate' '' > should run GHA creation workflow and generate valid workflow file 1`] = `
"
Your GitHub Actions workflow file has been created! ✨

Almost done! Push your newly created file (.github/workflows/rdme-openapi-validate.yml) to GitHub and you're all set 🚀

🦉 If you have any more questions, feel free to drop us a line! support@readme.io
"
`;

exports[`#createGHA > command inputs > 'openapi:validate' '' > should run GHA creation workflow and generate valid workflow file 2`] = `
"# This GitHub Actions workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`some-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - some-branch

jobs:
  rdme-openapi-validate:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v4

      - name: Run \`openapi:validate\` command 🚀
        uses: readmeio/rdme@v7
        with:
          rdme: openapi:validate petstore.json
"
`;

exports[`#createGHA > command inputs > 'openapi:validate' '' > should run GHA creation workflow with \`--github\` flag and messy file name and generate valid workflow file 1`] = `
"
Your GitHub Actions workflow file has been created! ✨

Almost done! Push your newly created file (.github/workflows/rdme-openapi-validate-with-github-flag.yml) to GitHub and you're all set 🚀

🦉 If you have any more questions, feel free to drop us a line! support@readme.io
"
`;

exports[`#createGHA > command inputs > 'openapi:validate' '' > should run GHA creation workflow with \`--github\` flag and messy file name and generate valid workflow file 2`] = `
"# This GitHub Actions workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`another-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - another-branch

jobs:
  rdme-openapi-validate:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v4

      - name: Run \`openapi:validate\` command 🚀
        uses: readmeio/rdme@v7
        with:
          rdme: openapi:validate petstore.json
"
`;
